Fixed scrollbars

--- a/src/less/statusView.module.less
+++ b/src/less/statusView.module.less
@@ -3,6 +3,7 @@
     border-width: 1px;
     border-style: solid;
     height: 100%;
+    overflow-y: auto;
 }
 
 .textArea {
